# NNS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  README.md  main.cpp
Include/: Activation.hpp  Layers.hpp
Source/: Layers.cpp  main.cpp
Utils/: Random.hpp  TypeErasure.hpp
cmake/: RunClangFormat.cmake
docs/: build-and-tests.md  library-usage.md  library-usage.ru.md
docs/formal/: bibl.bib  docs.tex  packages.sty  titlepage.sty
include/nns/: NNS.hpp
include/nns/activation/: AnyScalarActivation.hpp  BuiltinActivations.hpp  ScalarActivation.hpp
include/nns/core/: Cache.hpp  Data.hpp  OptCache.hpp  Parameters.hpp  StrongType.hpp  Tape.hpp  Types.hpp
include/nns/grads/: LinearGrads.hpp
include/nns/layers/: ActivationLayers.hpp  AnyLayer.hpp  Layers.hpp  LinearLayers.hpp  LossLayers.hpp
include/nns/learningrates/: AnyLearningRate.hpp  BuiltinLearningRates.hpp  LearningRates.hpp
include/nns/loss/: AnyLossFunction.hpp  BuiltinLoss.hpp  LossFunctions.hpp
include/nns/network/: Network.hpp
include/nns/nodes/: ActivationNode.hpp  LinearNode.hpp
include/nns/optimizer/: AnyOptimizer.hpp  BuiltinOptimizers.hpp  Optimizers.hpp
include/nns/trainer/: Trainer.hpp
include/nns/utils/: DataLoader.hpp  LoadCSV.hpp  Random.hpp
tests/: CMakeLists.txt  activation_tests.cpp  core_tests.cpp  layer_network_trainer_tests.cpp  loss_tests.cpp  nns_smoke_tests.cpp  optimizer_tests.cpp  utils_tests.cpp
utils/: Random.hpp  TypeErasure.hpp
